Bug 462971 - Profile configuration: set page scroll to half screen height does not work
Summary: Profile configuration: set page scroll to half screen height does not work
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-12 20:28 UTC by Frank Steinmetzger
Modified: 2022-12-30 18:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2022-12-12 20:28:49 UTC
I was in the process of syncing Konsole profiles across my devices. Playing around with profile settings, I discovered that I could set the page scroll height (setting ScrollFullPage in the profile file) to full, but not to half. Selecting full in the GUI writes ScrollFullPage=1 into the profile file (in legacy files, it was =True). But selecting half does not change the setting anymore.

STEPS TO REPRODUCE
1. Configure a profile
2. Go to the scrollbar page
3. Under “Scroll Page Up/Down:” select “Full screen height”, klick OK
→ The profile file now contains the line ScrollFullPage=1 and scrolling happens by full pages
4. Now select “Half screen height”

OBSERVED RESULT
The setting remains unchanged. When I reopen the profile configuration, the selection is displayed back at Full height.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Kernel Version: 6.0.12-arch1-1 (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2022-12-13 17:20:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/784
Comment 2 Matan Ziv-Av 2022-12-13 21:46:39 UTC
Git commit 5362bd97f481e89fb37c8f3f3c317fe44cc1ec3a by Matan Ziv-Av.
Committed on 13/12/2022 at 17:18.
Pushed by hindenburg into branch 'master'.

Set half page scrolling when the user selects this in the profile edit dialog

M  +1    -1    src/widgets/EditProfileDialog.cpp

https://invent.kde.org/utilities/konsole/commit/5362bd97f481e89fb37c8f3f3c317fe44cc1ec3a
Comment 3 Kurt Hindenburg 2022-12-30 18:03:53 UTC
Git commit 9d3e599ecb097175673218b696da9f274c86a434 by Kurt Hindenburg, on behalf of Matan Ziv-Av.
Committed on 30/12/2022 at 16:49.
Pushed by hindenburg into branch 'release/22.12'.

Set half page scrolling when the user selects this in the profile edit dialog

M  +1    -1    src/widgets/EditProfileDialog.cpp

https://invent.kde.org/utilities/konsole/commit/9d3e599ecb097175673218b696da9f274c86a434