Set half page scrolling when the user selects this in the profile edit dialog

BUG: 462971